// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button row 1`] = `
<div
  className="pe-button-row"
>
  <RaisedButton
    key="one"
    label="One"
  />
  <RaisedButton
    key="two"
    label="Two"
  />
  <RaisedButton
    key="three"
    label="Three"
  />
</div>
`;

exports[`Dark tone class + light tone 1`] = `
<div
  className="pe-button-row"
  style={
    Object {
      "background": "#fff",
    }
  }
>
  <RaisedButton
    label="Normal"
    tone="light"
  />
  <RaisedButton
    disabled={true}
    label="Disabled"
    tone="light"
  />
  <RaisedButton
    className="tests-raised-button-themed-button"
    label="Theme"
    tone="light"
  />
</div>
`;

exports[`Dark tone class + light tone class 1`] = `
<div
  className="pe-button-row pe-light-tone"
  style={
    Object {
      "background": "#fff",
    }
  }
>
  <RaisedButton
    label="Normal"
  />
  <RaisedButton
    disabled={true}
    label="Disabled"
  />
  <RaisedButton
    className="tests-raised-button-themed-button"
    label="Theme"
  />
</div>
`;

exports[`No options 1`] = `
<Button
  animateOnTap={false}
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: animateOnTap (false) 1`] = `
<Button
  animateOnTap={false}
  label="Don't animate shadow"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: children 1`] = `
<Button
  animateOnTap={false}
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
>
  <span>
    Child
  </span>
</Button>
`;

exports[`Option: class 1`] = `
<Button
  animateOnTap={false}
  className="class-x"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: className 1`] = `
<Button
  animateOnTap={false}
  className="className-x"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: content 1`] = `
<Button
  animateOnTap={false}
  content={
    <span>
      Content
    </span>
  }
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: disabled (false) 1`] = `
<Button
  animateOnTap={false}
  disabled={false}
  label="Not disabled"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: disabled (true) 1`] = `
<Button
  animateOnTap={false}
  disabled={true}
  label="Disabled"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={0}
    />
  }
/>
`;

exports[`Option: disabled -- dark tone class 1`] = `
<Button
  animateOnTap={false}
  disabled={true}
  label="Label"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={0}
    />
  }
/>
`;

exports[`Option: element 1`] = `
<Button
  animateOnTap={false}
  element="button"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: id 1`] = `
<Button
  animateOnTap={false}
  id="id-x"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: inactivate (2s) (JSX) 1`] = `
<RaisedButton
  inactivate={2}
  label="Inactivated for 2s"
/>
`;

exports[`Option: inactivate (2s) 1`] = `
<Button
  animateOnTap={false}
  inactivate={2}
  label="Inactivated for 2s"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: inactive (false) 1`] = `
<Button
  animateOnTap={false}
  inactive={false}
  label="Not inactive"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: inactive (true) 1`] = `
<Button
  animateOnTap={false}
  inactive={true}
  label="Inactive"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: ink (false) 1`] = `
<Button
  animateOnTap={false}
  ink={false}
  label="No ink"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: label -- dark tone class (should be app's primary color) 1`] = `
<Button
  animateOnTap={false}
  label="Label"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: label 1`] = `
<Button
  animateOnTap={false}
  label="Label"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: raised (with option z: 2) (JSX) 1`] = `
<RaisedButton
  label="Button"
  z={2}
/>
`;

exports[`Option: raised (with option z: 2) 1`] = `
<Button
  animateOnTap={false}
  label="Raised to 2"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
  z={2}
/>
`;

exports[`Option: raised (with option z: 5) 1`] = `
<Button
  animateOnTap={false}
  label="Raised to 5"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
  z={5}
/>
`;

exports[`Option: selected 1`] = `
<Button
  animateOnTap={false}
  label="Selected"
  parentClassName="pe-button pe-text-button pe-raised-button"
  selected={true}
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Option: style (colors) 1`] = `
<Button
  animateOnTap={false}
  label="Styled"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
  style={
    Object {
      "backgroundColor": "#EF6C00",
      "color": "#fff",
    }
  }
/>
`;

exports[`Option: tabindex 1`] = `
<Button
  animateOnTap={false}
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
  tabIndex={3}
/>
`;

exports[`Option: wash (false) 1`] = `
<Button
  animateOnTap={false}
  label="No wash"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
  wash={false}
/>
`;

exports[`Themed button (hover color) 1`] = `
<Button
  animateOnTap={false}
  className="tests-raised-button-hover-button"
  label="Hover button"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Themed button (should be red) 1`] = `
<Button
  animateOnTap={false}
  className="tests-raised-button-themed-button"
  label="Themed button"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={[Function]}
    />
  }
/>
`;

exports[`Themed button (with option disabled) 1`] = `
<Button
  animateOnTap={false}
  className="tests-raised-button-themed-button"
  disabled={true}
  label="Disabled themed button"
  parentClassName="pe-button pe-text-button pe-raised-button"
  shadowComponent={
    <Shadow
      animated={true}
      z={0}
    />
  }
/>
`;

exports[`With router 1`] = `
<Route
  render={[Function]}
/>
`;
